--- a/1 Physics/1 Mechanics/Problem_1/index.html
+++ b/1 Physics/1 Mechanics/Problem_1/index.html
@@ -235,6 +235,7 @@
 - Python implementations for simulations and visualizations.
 - Discussions on real-world applications and model limitations.</p>
 <p>These analyses provide insights into classical mechanics while connecting them to modern engineering and s![alt text]cientific applications.</p>
+<p>all</p>
 </div>
 </div><footer>
 <div aria-label="Footer Navigation" class="rst-footer-buttons" role="navigation">
