--- a/1 Physics/1 Mechanics/Problem_2/index.html
+++ b/1 Physics/1 Mechanics/Problem_2/index.html
@@ -172,8 +172,37 @@
 <div class="document" itemscope="itemscope" itemtype="http://schema.org/Article" role="main">
 <div class="section" itemprop="articleBody">
 <h1 id="problem-2">Problem 2</h1>
-<p>hello world l
-gt</p>
+<h1 id="investigating-the-dynamics-of-a-forced-damped-pendulum">Investigating the Dynamics of a Forced Damped Pendulum</h1>
+<h2 id="motivation">Motivation</h2>
+<p>The forced damped pendulum is a captivating example of a physical system with intricate behavior resulting from the interplay of damping, restoring forces, and external driving forces. These phenomena serve as a foundation for understanding complex real-world systems, such as driven oscillators, climate systems, and mechanical structures under periodic stress.</p>
+<h2 id="theoretical-foundation">Theoretical Foundation</h2>
+<p>The equation governing a forced damped pendulum is:</p>
+<div class="arithmatex">\[ \ddot{\theta} + b \dot{\theta} + \frac{g}{L} \sin(\theta) = A \cos(\omega t) \]</div>
+<p>For small angles, $$ \sin(\theta) \approx \theta $$, leading to a linearized equation that can be solved analytically. However, for large angles, numerical solutions are needed.</p>
+<h2 id="analysis-of-dynamics">Analysis of Dynamics</h2>
+<ul>
+<li>Low damping leads to oscillations close to simple harmonic motion.</li>
+<li>At resonance, the system absorbs maximum energy.</li>
+<li>With high forcing, chaotic behavior can emerge.</li>
+</ul>
+<h2 id="practical-applications">Practical Applications</h2>
+<ul>
+<li>Energy harvesting</li>
+<li>Suspension bridges (Tacoma Narrows collapse)</li>
+<li>Oscillating circuits (RLC circuits)</li>
+</ul>
+<h2 id="implementation">Implementation</h2>
+<p>We solve the equation numerically using the Runge-Kutta method.
+<img alt="alt text" src="../image-5.png"/></p>
+<h3 id="phase-space-analysis">Phase Space Analysis</h3>
+<p>We also plot the phase portrait.</p>
+<p><img alt="alt text" src="../image-6.png"/>
+```</p>
+<p>Deliverables
+- Theoretical derivations of projectile motion and forced damped pendulum dynamics.
+- Python implementations for simulations and visualizations.
+- Discussions on real-world applications and model limitations.</p>
+<p>These analyses provide insights into classical mechanics while connecting them to modern engineering and s![alt text]cientific applications.</p>
 </div>
 </div><footer>
 <div aria-label="Footer Navigation" class="rst-footer-buttons" role="navigation">
