--- a/1 Physics/1 Mechanics/Problem_2/index.html
+++ b/1 Physics/1 Mechanics/Problem_2/index.html
@@ -202,7 +202,7 @@
 - Theoretical derivations of projectile motion and forced damped pendulum dynamics.
 - Python implementations for simulations and visualizations.
 - Discussions on real-world applications and model limitations.</p>
-<p>These analyses provide insights into classical mechanics while connecting them to modern engineering</p>
+<p>These analyses provide insights into classical mechanics while connecting them to modern engineering.</p>
 </div>
 </div><footer>
 <div aria-label="Footer Navigation" class="rst-footer-buttons" role="navigation">
