deploy: ad3b6a468416277d70cfacdc44d31fd5ade1a7fd

--- a/1 Physics/2 Gravity/Problem_1/index.html
+++ b/1 Physics/2 Gravity/Problem_1/index.html
@@ -172,6 +172,76 @@
 <div class="document" itemscope="itemscope" itemtype="http://schema.org/Article" role="main">
 <div class="section" itemprop="articleBody">
 <h1 id="problem-1">Problem 1</h1>
+<hr/>
+<h1 id="keplers-third-law-and-orbital-motion-analysis"><strong>Kepler's Third Law and Orbital Motion Analysis</strong></h1>
+<h2 id="introduction"><strong>Introduction</strong></h2>
+<p>Kepler's Third Law states that the square of a planet's orbital period is proportional to the cube of its semi-major axis:</p>
+<div class="arithmatex">\[
+T^2 \propto R^3
+\]</div>
+<p>where:
+-  T is the orbital period,
+- R  is the semi-major axis (for circular orbits, the orbital radius),
+- The proportionality constant depends on the mass of the central body.</p>
+<p>This relationship provides crucial insights into planetary motion, helping astronomers determine distances and masses of celestial bodies.</p>
+<p><img alt="alt text" src="../image.png"/></p>
+<hr/>
+<h2 id="1-understanding-keplers-third-law-in-circular-orbits"><strong>1. Understanding Kepler’s Third Law in Circular Orbits</strong></h2>
+<p>For a circular orbit, the gravitational force provides the necessary centripetal force:</p>
+<div class="arithmatex">\[
+\frac{G M m}{R^2} = \frac{m v^2}{R}
+\]</div>
+<p>where:
+- G is the gravitational constant $$ 6.674 \times 10^{-11} \, m^3 kg^{-1} s^{-2}\ $$
+- <span class="arithmatex">\(M\)</span> is the mass of the central body (e.g., the Sun),
+- <span class="arithmatex">\(m\)</span> is the mass of the orbiting body,
+- <span class="arithmatex">\(R\)</span> is the orbital radius,
+- <span class="arithmatex">\(v\)</span> is the orbital velocity.</p>
+<p>Since velocity is related to the period by $$ v = \frac{2 \pi R}{T} $$, substituting into the equation above gives:</p>
+<div class="arithmatex">\[
+T^2 = \frac{4 \pi^2 R^3}{G M}
+\]</div>
+<p>This confirms the proportionality <span class="arithmatex">\(<span class="arithmatex">\(T^2 \propto R^3\)</span>\)</span></p>
+<p><img alt="alt text" src="../image-1.png"/></p>
+<hr/>
+<h2 id="2-computational-implementation-for-circular-orbits"><strong>2. Computational Implementation for Circular Orbits</strong></h2>
+<h3 id="code-breakdown"><strong>Code Breakdown</strong></h3>
+<ul>
+<li>The function <code>orbital_period(radius, mass_center)</code> calculates the orbital period using Kepler’s Third Law.</li>
+<li>We define a range of orbital radii (from 0.1 to 5 AU).</li>
+<li>Using the function, we compute the corresponding orbital periods.</li>
+<li>We verify the relationship $$T^2 / R^3 $$ remains constant.</li>
+</ul>
+<h3 id="graphical-representation"><strong>Graphical Representation</strong></h3>
+<ol>
+<li><strong>Orbital Period vs. Orbital Radius:</strong> The first plot shows the dependence of orbital period on radius.</li>
+<li><strong>Kepler’s Verification Plot:</strong> The second plot confirms that <span class="arithmatex">\(<span class="arithmatex">\(T^2 / R^3\)</span>\)</span> is approximately constant.</li>
+</ol>
+<hr/>
+<h2 id="3-extending-to-elliptical-orbits"><strong>3. Extending to Elliptical Orbits</strong></h2>
+<h3 id="elliptical-motion"><strong>Elliptical Motion</strong></h3>
+<p>Kepler's First Law states that planetary orbits are elliptical, with the Sun at one focus. The equation for an elliptical orbit is:</p>
+<div class="arithmatex">\[
+r = \frac{a (1 - e^2)}{1 + e \cos \theta}
+\]</div>
+<p>where:
+- a is the semi-major axis,
+- e$ is the eccentricity (0 for a perfect circle, close to 1 for a highly elliptical orbit),
+- <span class="arithmatex">\((\theta)\)</span>  is the true anomaly (angle in the orbital plane).</p>
+<h3 id="elliptical-orbit-simulation"><strong>Elliptical Orbit Simulation</strong></h3>
+<ul>
+<li>The function <code>elliptical_orbit(a, e)</code> calculates the positions of an orbiting body.</li>
+<li>We simulate Earth's orbit with <span class="arithmatex">\( a = 1 \)</span> AU and <span class="arithmatex">\( e = 0.0167 \)</span>.</li>
+<li>The final plot visually represents an elliptical orbit.</li>
+</ul>
+<p><img alt="alt text" src="../image-2.png"/></p>
+<hr/>
+<h2 id="4-applications-and-implications"><strong>4. Applications and Implications</strong></h2>
+<ul>
+<li><strong>Planetary Masses:</strong> By measuring orbital periods and radii, astronomers estimate the masses of planets and stars.</li>
+<li><strong>Satellite Orbits:</strong> Kepler's Laws help design satellite trajectories around Earth.</li>
+<li><strong>Exoplanet Discovery:</strong> Observing periodic brightness dips in distant stars (due to orbiting planets) provides exoplanet data.</li>
+</ul>
 </div>
 </div><footer>
 <div aria-label="Footer Navigation" class="rst-footer-buttons" role="navigation">
