--- a/1 Physics/5 Circuits/Problem_1/index.html
+++ b/1 Physics/5 Circuits/Problem_1/index.html
@@ -182,7 +182,7 @@
 <div class="document" itemscope="itemscope" itemtype="http://schema.org/Article" role="main">
 <div class="section" itemprop="articleBody">
 <h1 id="problem-1">Problem 1</h1>
-<p>Great! Let’s tackle <strong>Option 2: Advanced Task – Full Implementation</strong> using <strong>Python</strong> and the <strong>NetworkX</strong> library to represent and manipulate the circuit graph. This solution will include:</p>
+<p><strong>Option 2: Advanced Task – Full Implementation</strong> using <strong>Python</strong> and the <strong>NetworkX</strong> library to represent and manipulate the circuit graph. This solution will include:</p>
 <ol>
 <li><strong>Algorithm Design &amp; Pseudocode</strong></li>
 <li><strong>Full Python Implementation</strong></li>
