deploy: bb3d827ac9491df3cb937f59ff4cd553fda10461

--- a/1 Physics/6 Statistics/Problem_2/index.html
+++ b/1 Physics/6 Statistics/Problem_2/index.html
@@ -176,7 +176,7 @@
 <div class="document" itemscope="itemscope" itemtype="http://schema.org/Article" role="main">
 <div class="section" itemprop="articleBody">
 <h1 id="problem-2">Problem 2</h1>
-<p>Here’s the complete Python code and structure for your Monte Carlo estimation project, broken into two methods:</p>
+<p>Monte Carlo estimation project</p>
 <h3 id="part-1-circle-based-estimation">✅ Part 1: Circle-Based Estimation</h3>
 <ul>
 <li>Generates random <code>(x, y)</code> points in a square bounding a unit circle.</li>
